added smooth scrolling links

--- a/main.html
+++ b/main.html
@@ -31,10 +31,10 @@
             <a class="nav-link active  text-info" aria-current="page" href="#">HOME</a>
           </li>
           <li class="nav-item  px2">
-            <a class="nav-link" href="#">ABOUT US</a>
+            <a class="nav-link" href="#about">ABOUT US</a>
           </li>
           <li class="nav-item  px-2">
-            <a class="nav-link" href="#">PAGES</a>
+            <a class="nav-link" href="#team">TEAM</a>
           </li>
           <li class="nav-item  px-2">
             <a class="nav-link" href="#">SERVICES</a>
@@ -127,7 +127,7 @@
 
 <!-- about us section -->
 
-<section>
+<section id="about">
   <div class="container py-4">
     <div class="row align-items-center justify-content-center p-5">
       <div class="col-12 col-lg-6">
@@ -147,7 +147,7 @@
 
 <!-- team section -->
 
-<section>
+<section id="team">
   <div class="container text-center">
     <div class="row">
      
